--- a/style.css
+++ b/style.css
@@ -45,21 +45,95 @@ body /*inheritance*/
 }
 
 /*-------------------------------------------------------------Main : Menu --------------------------------------------------------------------*/
-
+/* search tool*/
 .filtres
 {
     grid-area: filtres;
-    grid-column-end: 13;
-    
-    border: 3px black solid;   
+    grid-column-end: 13;    
+       
+}
+/***************************search**************************************************/
+form
+{
+    display: inline-flex; /*ajuste la taile de la div au dimension du conteneur*/
+    border-radius: 10px 10px 10px 10px;
+    border: 1px #f2f2f2;
+    height: 2rem; 
+   
+}
+.location
+{
+    background-color:#f2f2f2;
+    border-radius: 8px 00px 00px 8px;
+    border: 1px #f2f2f2 solid;
+    width:2.5rem;
+    /*font-size: 0.75rem;*/
+    text-align: center;
+    padding-top:3px
+}
+.fa-map-marker-alt
+{
+  font-size:0.75rem;
+  
+}
+.search
+{
+  border-color: #ffffff;
+  font-size:0.75rem;
+  padding-left: 3%;
+
+}
+.submit
+{
+  
+  border-radius: 0px 8px 8px 0px;
+  background-color: #0065fc;
+  border-color: #0065fc;
+  color: #ffffff;
+  font-size:0.75rem;
+  
 }
 
-#filtre
+
+/****************************************** filtres ************************************************************/
+.filtre:hover
 {
-    border-radius: 10px;
-    border: 3px black solid;
-    /*definition css des bouton filtre*/
+  background-color: #0065fc;
 }
+.filtre
+{
+  display:inline-flex;
+  border: 1px #f2f2f2 solid;
+  padding-right: 3.25%;
+  cursor: pointer;
+
+}
+.billet
+{
+  
+  border: 1px #f2f2f2 solid;
+  background-color: #0065fc;
+  border-radius: 50%;
+  height:1rem;
+  width: 1rem;
+  text-align: center;
+  padding-bottom: 10px;
+  
+
+  /*font-size: 1rem;*/
+
+}
+.fa-money-bill-wave
+{
+  font-size: 0.5rem;
+}
+.filtre__menu
+{
+  border: 1px #f2f2f2 solid;
+  border-radius: 0px 10px 10px 0px;
+  margin-left:3.25%
+}
+
 
 /* MAIN ----------------------------------------Setup card for "hébergement", "activité", "populaire"--------------------------------------------*/
 
