--- a/style.css
+++ b/style.css
@@ -1,15 +1,3 @@
-*, *::before,*::after
-{
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-}
-
-@font-face {
-    font-family: 'Raleway';
-    src: url(Police/Raleway-Italic-VariableFont_wght.ttf);
-    src: url(Police/Raleway-VariableFont_wght.ttf);
-}
 
 body /*inheritance*/
 {
@@ -19,80 +7,118 @@ body /*inheritance*/
     font-style:normal;
     text-align: left;/* toutes les justifications sont sur la gauche*/
     word-wrap: break-word;/* faire que le texte revienne a la ligne*/
-    margin-left:3.45%;
-    margin-right:3.34%;
-    line-height:1.5rem;
     display:grid;
-    grid-template-columns:repeat(12,1fr);
-    grid-template-rows: 0.05fr 0.1fr 2fr 1fr 0.1fr; /* revoir les dimensions*/
-    grid-gap:3.23%;
+    margin:0;
+    grid-template-columns:1fr;
+    grid-template-rows:0.1fr 03.fr 1fr 0.5fr 0.2fr; /* revoir les dimensions*/
     grid-template-areas: /*setup tempalte*/
     "header header"
     "filtres filtres"
-    "hebergement populaire"
+    "global_hebergement global_hebergement"
     "activite activite"
     "footer footer"
     
 }
-.titre
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin:0;
+  
+}
+.recherche__titre__span
 {
     font-weight:normal;
     font-size:1rem;
+}
+a:link , a:visited
+{ 
+ text-decoration:none; 
+ color:#000;
+} 
+.fas
+{
+   color:#0065fc;
 }
 /*---------------------------------------------------------header setting------------------------------------------------------------------------*/
 .header
 {
     grid-area:header;
-    grid-column-end: 13;
-    display:flex;
-    background-color: #aaaa;
-    border: 3px black solid;
-    justify-content: space-between;
-    grid-row-start: 1;
-   
+    display:grid;
+    grid-template-columns:repeat(9,1fr);
+    grid-gap:2rem;
+    justify-content: center;
+    align-items: center;
+    /*border:1px solid black;*/
+    padding:2rem;
+       
 }
-#logo
+.header__Logo
 {
-    width: 5%; /*valeur fixe ou tout du moins mettre un minimum de largeur*/
+  grid-column-start: 1;
+  border:1px solid black;
+}
+#header__Logo__reservia
+{
+    width: 1fr; /*valeur fixe ou tout du moins mettre un minimum de largeur*/
     min-width: 16px;
 }
-
+.header__menu
+{
+  grid-column:7/span 3;
+  border:1px solid black;
+}
+.header__menu__list
+{
+  display:flex;
+  justify-content: space-around;
+  color:#f2f2f2;
+  border:1px solid black;
+  
+}
+.header__menu__list__hoover:hover
+{
+border-top:1px solid blue;
+color:blue;
+}
 /*-------------------------------------------------------------Main : Menu --------------------------------------------------------------------*/
 /* search tool*/
-.filtres
+.recherche
 {
     grid-area: filtres;
-    grid-column-end: 13;    
+    padding:2rem; 
        
 }
 /***************************search**************************************************/
 form
 {
     display: inline-flex; /*ajuste la taile de la div au dimension du conteneur*/
-    border-radius: 10px 10px 10px 10px;
-    border: 1px #f2f2f2;
+    border-radius: 10px;
+    border: 1px #f2f2f2 solid;
     height: 2rem; 
+    margin-bottom: 1rem;
    
 }
-.location
+.recherche__location
 {
     background-color:#f2f2f2;
     border-radius: 8px 00px 00px 8px;
     border: 1px #f2f2f2 solid;
     width:2.5rem;
-    /*font-size: 0.75rem;*/
+    height: 1.8rem;    
     text-align: center;
-    padding-top:3px
+    padding-top:0.1rem;
+    
 }
 .fa-map-marker-alt
 {
   font-size:0.75rem;
+  color:black
   
 }
 .search
 {
   font-size:0.75rem;
-  padding-left: 3%;
+  padding-left: 1rem;
   font-weight: bold;
   border:none;
 
@@ -102,7 +128,6 @@ form
   
   border-radius: 0px 8px 8px 0px;
   background-color: #0065fc;
-  
   border:none;
   color: #ffffff;
   font-size:0.75rem;
@@ -111,62 +136,77 @@ form
 
 
 /****************************************** filtres ************************************************************/
-.filtre:hover
+
+.recherche__filtre
 {
-  background-color: #0065fc;
+  
+  display: flex; /* attention mettre le flex pour ajuster les dimension au contenu du contenaire*/
+  border: 1px black solid;
+  justify-content:space-around;
+  align-items: center;
+  font-weight: bold;
+  font-size:1rem;
+
 }
-.filtre
+.recherche__filtre__contenaire
 {
-  display:inline-flex;
-  border: 1px #f2f2f2 solid;
-  padding-right: 3.25%;
+  display:flex;
+  border: 1px black solid;
+  align-items:  stretch; /* etire sur toute la hauteur voir les cartes également*/
+  border-radius:10rem;
   cursor: pointer;
 
 }
-.billet
+.recherche__filtre__contenaire:hover
 {
-  
-  border: 1px #f2f2f2 solid;
   background-color: #0065fc;
-  border-radius: 50%;
-  height:1rem;
-  width: 1rem;
-  text-align: center;
-  padding-bottom: 10px;
+}
+.recherche__filtre__fas
+{
   
-
-  /*font-size: 1rem;*/
-
+  background-color: #deebff;  
+  text-align: center;
+  padding:0 0.5rem 0 0.5rem;
+  border-radius: 50%;
+  display: flex;
+  align-items:center;
 }
-.fa-money-bill-wave
+
+.recherche__filtre__text
 {
-  font-size: 0.5rem;
-}
-.filtre__menu
-{
-  border: 1px #f2f2f2 solid;
-  border-radius: 0px 10px 10px 0px;
-  margin-left:3.25%
+  padding:0.5rem;
 }
 
 
 /* MAIN ----------------------------------------Setup card for "hébergement", "activité", "populaire"--------------------------------------------*/
 
 /*common elements*/
+.global_hebergement
+{
+  grid-area:global_hebergement;
+  display:grid;
+  grid-template-columns:7fr 3fr;
+  grid-gap:2rem;
+  padding-left:2rem;
+  padding-right:2rem;
+  margin-bottom: 2rem;
+}
 h2, em, .Pbold /*ajustement identique sur toutes les sections*/
 {
  
     font-weight: bold;
+    margin:0;
 }
 h3, p
 {
     
     font-size: 1rem;
+    margin:0;
 }
 .card__stars
 {
   /* Le groupe '.stars' positionne les étoiles les unes à côté des autres sans espacements. */
-    display: inline-flex;
+    display: inline-flex; /*changer l'inline flex en flex*/
     font-size: 1rem;
     border: 1px black solid;
 }
@@ -184,7 +224,7 @@ img
 {
     max-width: 100%;
     max-height: 100%;
-    /*border-radius: 10px 10px 0 0;*/
+    
     display: block;
 }
 
@@ -193,18 +233,17 @@ img
 
 .hebergement
 {
-    grid-area: hebergement;
-    grid-column:1/span 8;
-    /*width: 55rem;*/
-    height:38rem;
+    /*grid-area: hebergement;*/
+    grid-column-start: 1;
     background-color: #f2f2f2;
-    padding:5%;
     border-radius: 10px;
     border: 1px #f2f2f2 solid;
+    height:38rem;
     display:grid;
     grid-template-columns:repeat(3,1fr);
     grid-template-rows: repeat(4,1fr);
-    grid-gap:3%;
+    padding:1.5rem;
+    grid-gap:1.5rem;
    
 }
 
@@ -213,16 +252,15 @@ img
     display:flex;
     flex-direction: column;
     background-color: #ffffff;
-    width: 15.5rem;
-    height:12.4rem;
     border-radius: 10px;
     box-shadow:2px 2px 6px rgb(206, 204, 204) ;
     border: 1px #ffffff solid;
-    padding:3.25% 3.25% 3.25% 3.25%;
+    padding:3.25% ;
     cursor: pointer;
-    width: 10rem;
-    height:10rem;
-    box-sizing: border-box;
+    width: 1fr;
+    height:1fr;
+    
+    
 }
 .card1__thumb /*mise en forme image card hebergement*/
 {
@@ -241,33 +279,31 @@ img
 
 .populaire
 {
-    grid-area: populaire;
-    grid-column:9/span 4;
+    
+    grid-column-start: 2;
     background-color: #f2f2f2;
-    height:38rem;
-    padding:5%;
     border-radius: 10px;
     border: 1px #f2f2f2 solid;
+    height:38rem; /*pas sur que le rem soit indiqué mais a retester*/
     display:grid;
-    grid-template-columns:1fr;
     grid-template-rows: repeat(4,1fr);
-    grid-gap:3%;
+    padding:1.5rem;
+    grid-gap:1.5rem;
 }
 
  .card2
   {
     display:flex;
-     /*CSS setup card "populaire" use media queries*/
-    background-color: #ffffff;
-    width: 21.3rem;
-    height:8.9rem;
-    border-radius: 10px;
-    box-shadow:2px 2px 6px rgb(206, 204, 204) ;
-    border: 1px #ffffff solid;
-    padding:3.25% 3.25% 3.25% 3.25%;
-    cursor: pointer;
     align-items: flex-start;
     justify-content: center;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow:2px 2px 6px rgb(206, 204, 204) ;
+    border: 1px #ffffff solid;
+    padding:3.25%;
+    cursor: pointer;
+    width: 1fr;
+    height:1fr; 
   }
   .card2__thumb /*mise en forme image card hebergement*/
   {
@@ -287,17 +323,23 @@ img
    .activite
 {
     grid-area: activite;
-    grid-column-end: 13;
-    background-color:white;
-    border: 3px black solid;
     display:grid;
     grid-template-columns:repeat(4,1fr);
     grid-template-rows: repeat(2,1fr);
-    grid-gap:3%;
+    padding:2rem;
+    grid-gap:1.5rem;
+  /*  grid-template-areas: 
+    "titre titre"
+    "article article"*/
 }
+/*.activite h2
+{
+  grid-area: titre;
+}*/
  .card3 
  {
    /*CSS setup card "activités" use media queries*/
+   /*grid-area: article;*/
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow:2px 2px 6px rgb(206, 204, 204) ;
@@ -318,12 +360,14 @@ img
 .footer
 {
     grid-area:footer;
-    grid-column-end: 13;
     display:grid;
     grid-template-columns: repeat(3,1fr);
-    background-color: #aaaa;
-    
+    background-color: #f2f2f2;
+    padding:2rem;
+    line-height: 2rem;
 }
+.titrefooter
+    
 
 
   
