--- a/style.css
+++ b/style.css
@@ -48,13 +48,14 @@ a:link , a:visited
     justify-content: center;
     align-items: center;
     /*border:1px solid black;*/
-    padding:2rem;
+    padding:2rem 2rem 0 2rem ;
+    /*margin:0;*/
        
 }
 .header__Logo
 {
   grid-column-start: 1;
-  border:1px solid black;
+  /*border:1px solid black;*/
 }
 #header__Logo__reservia
 {
@@ -64,14 +65,18 @@ a:link , a:visited
 .header__menu
 {
   grid-column:7/span 3;
-  border:1px solid black;
+  justify-content: space-around;
+  justify-items:center;
+  display:flex;
+  
+  /*border:1px solid black;*/
 }
 .header__menu__list
 {
   display:flex;
   justify-content: space-around;
   color:#f2f2f2;
-  border:1px solid black;
+  /*border:1px solid black;*/
   
 }
 .header__menu__list__hoover:hover
@@ -84,7 +89,7 @@ color:blue;
 .recherche
 {
     grid-area: filtres;
-    padding:2rem; 
+    padding:0 2rem 2rem 2rem; 
        
 }
 /***************************search**************************************************/
@@ -144,7 +149,7 @@ form
   align-items: center;
   font-weight: bold;
   font-size:1rem;
-  margin:1rem 0 1rem 0;
+  margin:1rem 0 2rem 0;
   
 }
 .recherche__filtre div
@@ -162,7 +167,8 @@ form
 }
 .recherche__filtre__contenaire:hover
 {
-  background-color: #0065fc;
+  background-color: #deebff;
+  box-shadow: 2px 2px 2px rgba(0,101,252,2);
 }
 .recherche__filtre__fas
 {
@@ -184,20 +190,20 @@ form
 {
   padding:0.5rem 1rem 0.5rem 0 ;
   align-self:center;
+  margin:0;
   
 }
 /************comment **********************/
 .information
 {
-  margin:1rem 0 1rem 0;
+  
   display:flex;
   align-items: center;
   
 }
-.information__fa
+.information__fa /* achever le cadréaged e l'icon et sa taille*/
 {
   border:1px black solid;
-  /*font-weight: lighter;*/
   margin-right:1rem;
   border-radius: 50%;
   width:1.5rem;
@@ -214,45 +220,53 @@ form
   grid-area:global_hebergement;
   display:grid;
   grid-template-columns:7fr 3fr;
-  grid-gap:2rem;
-  padding-left:2rem;
+  grid-auto-rows: auto;
+  grid-gap:3rem;
+  padding-left:3rem;
   padding-right:2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 h2, em, .Pbold /*ajustement identique sur toutes les sections*/
 {
  
     font-weight: bold;
     margin:0;
+    padding:0;
 }
-h3, p
+
+h3
 {
-    
     font-size: 1rem;
-    margin:0;
+    margin:0.5rem;
+}
+.card_p
+{
+  margin-left:0.5rem ;
+  margin-bottom:0.5rem ;
+  margin-top:0;
+}
 }
 .card__stars
 {
   /* Le groupe '.stars' positionne les étoiles les unes à côté des autres sans espacements. */
-    display: inline-flex; /*changer l'inline flex en flex*/
+    display: flex; 
     font-size: 1rem;
-    border: 1px black solid;
+    margin-left:0.5rem;
 }
 
 .fa-star/* Par défaut, une étoile est en gris, avec un padding et un curseur en forme de main. */
 {
     color:#f2f2f2;
-    padding: 0.0625rem;
+    /*padding: 0.0625rem;*/
 }
 .fa-star.blue/* Si elle porte en plus la classe '.gold', elle sera en jaune. */
 {
-    color: #0065fc;
+    color: rgb(0, 101, 252);
 }
 img
 {
     max-width: 100%;
     max-height: 100%;
-    
     display: block;
 }
 
@@ -261,20 +275,22 @@ img
 
 .hebergement
 {
-    /*grid-area: hebergement;*/
     grid-column-start: 1;
     background-color: #f2f2f2;
     border-radius: 10px;
     border: 1px #f2f2f2 solid;
-    height:38rem;
     display:grid;
     grid-template-columns:repeat(3,1fr);
-    grid-template-rows: repeat(4,1fr);
-    padding:1.5rem;
-    grid-gap:1.5rem;
+    grid-template-rows: 0.1fr 2fr 2fr 0.1fr;
+    padding:2rem;
+    grid-gap:2rem;
    
 }
-
+.hebergement h2
+{
+  grid-row-start: 1;
+  grid-column: 1/4;
+}
 .card1 /*hebergement*/
 {
     display:flex;
@@ -283,24 +299,23 @@ img
     border-radius: 10px;
     box-shadow:2px 2px 6px rgb(206, 204, 204) ;
     border: 1px #ffffff solid;
-    padding:3.25% ;
+    padding:0.2rem;
     cursor: pointer;
-    width: 1fr;
-    height:1fr;
+    /*width: 1fr;
+    height:1fr;*/
     
     
 }
 .card1__thumb /*mise en forme image card hebergement*/
 {
-    width:8rem ;
-    height: 5rem;       
+   
+    height: 7rem;       
     border-radius: 10px 10px 0 0;
     
 }
 .card1__thumb__img
 {
-    width:8rem ;
-    height: 5rem;       
+    width:100% ; 
     border-radius: 10px 10px 0 0;
 }
  /*---------------------------------------------------------"Populaire" card setting"--------------------------------------------------------------*/
@@ -308,43 +323,60 @@ img
 .populaire
 {
     
-    grid-column-start: 2;
-    background-color: #f2f2f2;
-    border-radius: 10px;
-    border: 1px #f2f2f2 solid;
-    height:38rem; /*pas sur que le rem soit indiqué mais a retester*/
-    display:grid;
-    grid-template-rows: repeat(4,1fr);
-    padding:1.5rem;
-    grid-gap:1.5rem;
+  grid-column-start: 2;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  border: 1px #f2f2f2 solid;
+  display:grid;
+  grid-template-rows:2rem 1fr 1fr 1fr;
+  padding:2rem;
+  grid-gap:2rem;
+}
+.trend
+{
+  grid-row-start: 1;
+  display:flex;
+  justify-content: space-between;
+   
+}
+.trend_fa
+{
+  align-self: baseline;
+  color: black;
+  font-size: 1rem;
+
+}
+.fa-chart-line
+{
+  color: black;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.card2
+{
+  display:flex;
+  /*align-items:stretch;*/
+  justify-content: stretch;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow:2px 2px 6px rgb(206, 204, 204) ;
+  padding:0.2rem;
+  cursor: pointer;
+
 }
 
- .card2
-  {
-    display:flex;
-    align-items: flex-start;
-    justify-content: center;
-    border-radius: 10px;
-    background-color: #ffffff;
-    box-shadow:2px 2px 6px rgb(206, 204, 204) ;
-    border: 1px #ffffff solid;
-    padding:3.25%;
-    cursor: pointer;
-    width: 1fr;
-    height:1fr; 
-  }
   .card2__thumb /*mise en forme image card hebergement*/
-  {
-    width:7.9rem ;
-    height: 8.4rem;   
-    border-radius: 10px 00px 0 10px; 
-  }
-  .card2__thumb__img
-  {
-    width:7.9rem ;
-    height: 8.4rem;   
-    border-radius: 10px 0px 0 10px; 
-  }
+{
+  /*height: 14rem;  */ 
+  border-radius: 10px 00px 0 10px;
+  flex-shrink;1 
+}
+.card2__thumb__img
+{
+  width:6rem;
+  height: 8rem; 
+  border-radius: 10px 0px 0 10px; 
+}
 
    /*--------------------------------------------------------"Actitivé" card setting -------------------------------------------------------------*/
 
@@ -353,31 +385,29 @@ img
     grid-area: activite;
     display:grid;
     grid-template-columns:repeat(4,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-rows: 1rem, 1fr;
     padding:2rem;
-    grid-gap:1.5rem;
-  /*  grid-template-areas: 
-    "titre titre"
-    "article article"*/
+    grid-gap:2rem;
+  
 }
-/*.activite h2
+.activite h2
 {
-  grid-area: titre;
-}*/
+  grid-row-start: 1;
+}
  .card3 
  {
-   /*CSS setup card "activités" use media queries*/
-   /*grid-area: article;*/
+   
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow:2px 2px 6px rgb(206, 204, 204) ;
    border: 1px #ffffff solid;
-   padding:3.25% 3.25% 3.25% 3.25%;
+   width:1fr;
+  /* padding:3.25% 3.25% 3.25% 3.25%;*/
    cursor: pointer;
  }
  .card3__thumb /*mise en forme image card hebergement*/
  {
-   width: auto;   
+   width: 1fr;   
    border: 1px black solid;     /*#fffff - attention le div doit etre dimansionné*/
    border-radius: 10px 00px 0 10px; 
  }
@@ -394,10 +424,80 @@ img
     padding:2rem;
     line-height: 2rem;
 }
-.titrefooter
-    
+   
 
 
-  
+ /****************************************************MEDIA QUERIES********************************************************************/ 
  
+
+@media screen and (max-width: 768px)
+{
+  body{
+    grid-template-rows:auto;
+    grid-template-areas: /*setup tempalte*/
+    "header"
+    "filtres"
+    "global_hebergement"
+    "activite"
+    "footer"
+  }
+    .global_hebergement
+  {
+    /*display:grid;*/
+    grid-template-columns:1fr;
+    padding:0;
+    /*margin-bottom: 3rem;*/
   
+  }
+
+
+
+/*----------------------------------------------------"Hebergement card setting"------------------------------------------------------------------*/
+
+    .hebergement
+    {
+        grid-row-start: 2;
+        display:grid;
+        grid-template-columns:1fr;
+        grid-template-rows: repeat(8;1fr);
+        background-color: white;
+        border:none;
+        grid-gap:1rem;
+        
+    }
+      .hebergement h2
+      {
+        grid-column:1;
+        font-style: 1rem;
+      }
+ /*---------------------------------------------------------"Populaire" card setting"--------------------------------------------------------------*/
+
+  .populaire
+  {
+      
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-gap:1rem;
+
+    
+  }
+  .activite
+{
+    grid-template-columns:1fr;
+    grid-template-rows: 1rem repeat(6,1fr);
+    padding:2;
+    grid-gap:1.1rem;
+ }
+ .card3
+ {
+   height:1fr;
+   width:1fr;
+ }
+ .footer
+ {
+  
+  grid-template-columns:1fr;
+  grid-template-rows: repeat(3,1fr);
+ }
+
+}
