--- a/style.css
+++ b/style.css
@@ -6,21 +6,22 @@ body /*inheritance*/
     word-wrap: break-word;/* faire que le texte revienne a la ligne*/
     margin:0;
     font-size:0.75rem;
-   display:grid;
+    display:grid;
     grid-template-columns:1fr;
-    grid-template-rows:0.1fr 03.fr 1fr 0.5fr 0.2fr; /* revoir les dimensions*/
-   grid-template-areas: /*setup tempalte*/
-   "header header"
-    "filtres filtres"
-    "global_hebergement global_hebergement"
-    "activite activite"
-    "footer footer"
+    /*grid-template-rows:1fr 0.1fr 0.5fr 0.4fr 0.2fr; /*pas besoin d'ajuster les dimension de la grille, automatique*/
+    align-content: flex-start;
+    grid-template-areas: /*setup tempalte*/
+    "header"
+    "filtres"
+    "global_hebergement"
+    "activite"
+    "footer"
     
     
 }
 
 
-a:link , a:visited
+a:link, a:visited
 { 
  text-decoration:none; 
  color:#000;
@@ -30,12 +31,14 @@ a:link , a:visited
 p
 {
     margin:0;
+    
 }
 /*---------------------------------------------------------header setting------------------------------------------------------------------------*/
   .header
   {
       grid-area:header;
-      margin:2rem 3.2rem 0 3.2rem;
+      margin:0rem 3.2rem 0 3.2rem;
+
       
   }
     .header__menu
@@ -44,28 +47,23 @@ p
       grid-template-columns:repeat(9,1fr);
       grid-gap:1rem;
       align-items:center;
-      justify-items:end;
-      padding:0 2rem 0 0rem ;
+      justify-items:stretch;
+      padding:0rem 2rem 0 0rem ;
+      text-align: center;
     
     }
-      .header__menu :nth-child(1)
-      {
-        grid-column-start: 1;
-       justify-self: start;
-        
-        
-      }
+    
         
     .header__menu :nth-child(2)
       {
-        grid-column-start: 7;
+        grid-column-start: 7;         
        
         
       }
 
     .header__menu :nth-child(3)
       {
-        grid-column-start: 8;
+        grid-column-start: 8;       
         
         
       }       
@@ -73,24 +71,27 @@ p
     .header__menu :nth-child(4)
       {
         grid-column-start: 9;
-        color:blue;
-        font-weight: bold;
-        
+        color:#deebff;
+        font-weight: bold;       
         
        
       }
-
+    
       #header__Logo__reservia
       {
-          min-width: 5rem; /*valeur fixe ou tout du moins mettre un minimum de largeur*/
-          
+          width: 6rem; /*valeur fixe ou tout du moins mettre un minimum de largeur*/
+          padding-top:auto;
+          min-width: 5rem;
         }
       .header__menu__list__hoover:hover
       {
-      border-top:1px solid blue;
-      color:blue;
+      border-top:1px solid #0065fc;
+      color:#deebff;
       }
-
+      .header__menu div
+      {
+          padding-top: 2rem;
+      }
 
 /*-------------------------------------------------------------Main : Menu --------------------------------------------------------------------*/
 /* secondary nav setting*/
@@ -108,7 +109,7 @@ p
                 font-size:0.75rem;
                 
             }
-        /*searche enging implementation*/
+        /*searche engine implementation*/
         form
             {
                 display: inline-flex; /*ajuste la taile de la div au dimension du conteneur*/
@@ -143,7 +144,7 @@ p
             border:none;
 
             }
-            .submit
+            button
             {
             
             border-radius: 0px 8px 8px 0px;
@@ -152,8 +153,13 @@ p
             color: #ffffff;
             font-weight: bold;
             width: 6rem;
+            cursor: pointer;
             
             
+            }
+            .responsive
+            {
+                display:none;
             }
 
 /* filters tool*/
@@ -165,7 +171,7 @@ p
         justify-items:start;
         align-items: center;
         font-weight: bold;
-        /*font-size:1rem;*/
+        
         margin:1rem 0 2rem 0;
         align-content: center;
         
@@ -231,14 +237,11 @@ p
             margin-right:1rem;
             border-radius: 50%;
             width:1rem;
-            height:1rem;
-            /*font-weight: bold;*/
+            height:1rem;            
             color:#0065fc;
             font-size:0.7rem;
             text-align:center;
-            /*padding:0.125rem*/
-            /*align-self:flex-start;*/
-            /*font-size:0.5rem;*/
+            
             }
 /* MAIN ----------------------------------------Setup card for "hébergement", "activité", "populaire"--------------------------------------------*/
 
@@ -422,7 +425,7 @@ p
        grid-area: activite;
        display:grid;
        grid-template-columns:repeat(4,1fr);
-       grid-template-rows: 1rem, 1fr;
+       grid-template-rows: 1rem 1fr;
        padding:0 3.2rem 0 3.2rem;
        grid-gap:2rem;
        margin-bottom:3rem;
@@ -452,11 +455,11 @@ p
       background-color: #ffffff;
       border-radius: 10px;
       box-shadow:2px 2px 6px rgb(206, 204, 204) ;
-      /*height:1fr;*/
+     
       cursor: pointer;
       display:flex;
       flex-direction: column;
-      /*align-items:flex-start;*/
+     
       
     }
         .card3__thumb /*mise en forme image card hebergement*/
@@ -510,7 +513,7 @@ p
     {
         
         grid-template-columns:1fr;
-        grid-auto-rows: auto;
+        /*grid-auto-rows: auto;*/
         
         grid-gap:0.5rem;/*ajusté*/
         padding:0;/*ajusté*/
@@ -577,7 +580,7 @@ p
         grid-row: none;
         grid-column: none;
     }*/
-        
+ } 
  @media screen and (max-width: 789px)
  {
    
@@ -585,20 +588,11 @@ p
     {
       
       grid-template-columns:repeat(4,1fr);
-      /*justify-content: stretch;*/
       grid-gap:0.5rem;      
       padding:0 1rem 0 1rem ;
       
     }
-        /*#header__Logo__reservia
-        {
-            min-width: 5rem; 
-            
-        } */
-   .header__menu :nth-child(1)
-    {
-        justify-self: start;
-    }
+       
     /********************************secondary nav********************************************/
 .recherche__filtre
 {
@@ -664,24 +658,27 @@ p
  }
  @media screen and (max-width: 375px)
  {
+   
     .header
     {
-        margin:1rem 1.25rem 1rem 1.25rem;
+        margin:1rem 0rem 0rem 0rem;
     }
     .header__menu
     {
       
       grid-template-columns:repeat(2,1fr);
-      grid-template-rows: 2fr 2fr;  
-      justify-items: stretch;         
+      grid-template-rows: 2fr 2fr;
       padding:0;
-      font-size: 1fr;
+      font-size: 1rem;
+      grid-gap:0;
 
       
     }
+    
         #header__Logo__reservia
         {
             width: 4rem; 
+            padding: 0rem 0 1rem 1rem;
             
         }  
     .header__menu :nth-child(4)
@@ -689,13 +686,14 @@ p
         grid-column-start: 2;
         grid-row-start:1; 
         justify-self: end;
+        
     }
     .header__menu :nth-child(2)
     {
         grid-column-start: 1;
         grid-row-start:2;
+        justify-self: stretch;
        
-        justify-self: center;
         
     }
 
@@ -703,35 +701,63 @@ p
     {
         grid-column-start: 2;
         grid-row-start:2;
-        justify-self: center;
+        justify-self: stretch;
         
-        
+               
     }   
-    
-   /****************************************************secondary nav************************************************************/ 
-    
-.submit
-{
-  
-  border-radius: 8px;
-  width: 2rem;
-  height: 2rem;
-  font-size:0;
-  font-family: 'FontAwesome'; /*il manque l'icone loupe*/
-  content: "\f002";
- 
-}
 
-/***************filters***********************/
-.recherche    {
-        margin:1rem 1.25rem 1rem 1.25rem;
+    
+    .header__menu__list__hoover:hover
+    {
+    border-bottom:1px solid #0065fc;
+    border-top:0;
+    
+    }
+    .header__menu div
+    {
+        padding: 0rem 0 0.5rem 0;
+    }
+    .header__menu__list__hoover
+    {
+        border-bottom:1px solid #f2f2f2;
         
     }
+
+   /****************************************************secondary nav************************************************************/ 
+    
+   .normal
+   {
+     
+     display:none
+   
+   }
+   .responsive
+   {
+     display: block;
+   }
+   
+   button  {
+   
+     
+     border-radius: 8px;
+     width: 2rem;
+     height: 2rem;   
+     background-color: #0065fc;     
+     color: #ffffff;
+     
+   }
+
+/***************filters***********************/
+.recherche    
+    {
+        margin:0rem 1.25rem 1rem 1.25rem;
+        
+    }
+    h1{margin-top:0.5rem;}
     .recherche__filtre
 {
     display:grid;
     grid-template-columns: 9rem 1fr;
-    grid-template-rows: 4;
     align-items: center;
     margin:0 0 1rem 0;
 }
@@ -759,6 +785,7 @@ p
     {
         grid-row-start: 4;
     }
+    .recherche__filtre__fas .fas{font-size:0.6rem;}
 #filtrediv
 {
     margin-bottom: 0.75rem;
