--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ p
     margin:0;
     
 }
+img
+{
+    object-fit: cover;
+    object-position: center;
+    max-width: 100%;
+    max-height: 100%;
+    /*display: block;*/
+}
 /*---------------------------------------------------------header setting------------------------------------------------------------------------*/
   .header
   {
@@ -67,6 +75,10 @@ p
         
         
       }       
+      .header__menu p
+      {
+          text-align: left;
+      }
 
     .header__menu :nth-child(4)
       {
@@ -80,8 +92,9 @@ p
       #header__Logo__reservia
       {
           width: 6rem; /*valeur fixe ou tout du moins mettre un minimum de largeur*/
-          padding-top:auto;
+          padding-top:1rem;
           min-width: 5rem;
+          
         }
       .header__menu__list__hoover:hover
       {
@@ -294,12 +307,7 @@ p
     {
         color: rgb(0, 101, 252);
     }
-    img
-    {
-        max-width: 100%;
-        max-height: 100%;
-        display: block;
-    }
+    
 
 
 /*----------------------------------------------------"Hebergement card setting"------------------------------------------------------------------*/
@@ -342,15 +350,18 @@ p
                 .card1__thumb /*mise en forme image card hebergement*/
                 {
                 
-                    height: 6rem;       
+                    height: 8.5rem;       
                     border-radius: 10px 10px 0 0;/*ajusté*/
                     padding-bottom: 0.4rem;/*ajusté*/
+                   
                     
                 }
                     .card1__thumb__img
                     {
-                        width:100% ; 
+                        width:100% ;
+                        height: 100%;
                         border-radius: 10px 10px 0 0;
+                        
                     }
  /*---------------------------------------------------------"Populaire" card setting"--------------------------------------------------------------*/
 
@@ -361,9 +372,11 @@ p
         background-color: #f2f2f2;
         border-radius: 10px;
         border: 1px #f2f2f2 solid;
-        display:grid;
+        display:flex;
         padding:2.5rem;
-        grid-gap:2rem;
+        flex-direction: column;
+        justify-content: space-between;
+        
                 
         }
             .trend
@@ -371,6 +384,7 @@ p
            /* grid-row-start: 1;*/
             display:flex;
             justify-content: space-between;
+            margin-bottom: 1rem;
             
             }
                 .trend_fa
@@ -391,9 +405,11 @@ p
             display:flex;            
             border-radius: 10px;
             background-color: #ffffff;
+            margin-top:auto;
             box-shadow:2px 2px 6px rgb(206, 204, 204) ;
             padding:0.4rem;
             cursor: pointer;
+            /*justify-content: stretch;*/
 
             }
                 .card2 h3
@@ -404,13 +420,20 @@ p
                 {
                 
                 border-radius: 10px 00px 0 10px;
-                padding-right: 0.8rem;/*ajusté*/
+                margin-right:1rem;
+                /*padding-right: 0.8rem;/*ajusté*/
+                /*width:7rem ;
+                height:8rem ;
+                /*object-fit:cover ;*/
+                /*object-position: center;*/
                 }
                     .card2__thumb__img
                     {
-                    width:6rem;
-                    height:100%;
+                    width:7rem;
+                    height:8rem;
+                    /*height:100%;*/
                     border-radius: 10px 0px 0 10px; 
+                    
                     }
                 .card2 .card__stars
                 {
@@ -425,7 +448,6 @@ p
        grid-area: activite;
        display:grid;
        grid-template-columns:repeat(4,1fr);
-       grid-template-rows: 1rem 1fr;
        padding:0 3.2rem 0 3.2rem;
        grid-gap:2rem;
        margin-bottom:3rem;
@@ -454,24 +476,33 @@ p
       
       background-color: #ffffff;
       border-radius: 10px;
-      box-shadow:2px 2px 6px rgb(206, 204, 204) ;
-     
+      box-shadow:2px 2px 6px rgb(206, 204, 204) ;     
       cursor: pointer;
       display:flex;
       flex-direction: column;
+      justify-content: space-between;
+        /*max-height: 30rem;
+      /*align-items: stretch;
+      /*max-height:75rem ;*/
      
       
     }
         .card3__thumb /*mise en forme image card hebergement*/
         {
-        /*max-width: 20rem;   
-           /*#fffff - attention le div doit etre dimensionné*/
-        border-radius: 10px 00px 0 10px; 
-        /*margin-bottom: auto;*/
+        
+        max-height:10rem;           
+        border-radius: 10px 00px 0 10px;  
+         
+        /*object-fit: cover;*/
         }
+        
         .card3 img
         {
-            border-radius: 10px 10px 0 00px; 
+            border-radius: 10px 10px 0 00px;
+            max-height: auto;
+            object-fit: contain;
+            
+                     
         }
 
         .card3 h3
