--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,5 +1,5 @@
  /****************************************************MEDIA QUERIES********************************************************************/ 
- @media screen and (min-width: 1200px) and (max-width: 2100px)
+ @media screen and (min-width: 1200px) 
  {
     h2{margin-top:0;}
     /**********************header*******************/
@@ -110,26 +110,46 @@
         padding-left:3.2rem;/*ajusté*/
         padding-right:3.2rem;/*ajusté*/
         margin-bottom: 3rem;
-        justify-content: stretch;
+        margin-top: 2rem;;
+        /*justify-content: stretch;*/
     }
-    .hebergement
-    {
-        background-color: #f2f2f2;
-        border-radius: 10px;
-        border: 1px #f2f2f2 solid;
-        margin-top:2.5rem;
-    }
-
-    
-        .hosting_art
+        .hebergement
         {
-            display: grid;
-            grid-template-columns: repeat(3,1fr);
-            grid-template-rows: 1fr 1fr;
-            grid-gap:1rem;
-            /*padding:2.5rem;*/
+            background-color: #f2f2f2;
+            border-radius: 10px;
+            border: 1px #f2f2f2 solid;
+            margin-top:2.5rem;
+            margin:0;
         }
-        .card1
+        .hebergement span{font-weight: bold; padding:1rem 0 1rem 0;}
+        .hebergement h2{margin:1rem 0 1rem 0;}
+            .hosting_art
+            {
+                display: grid;
+                grid-template-columns: repeat(3,1fr);
+                grid-template-rows: 1fr 1fr;
+                grid-gap:1rem;
+                /*padding:2.5rem;*/
+            }
+            .card1
+                {
+                    background-color: #ffffff;
+                    padding: 0.4rem;
+                    margin:0;
+                    width:auto;
+                    height: auto;
+                }
+    /**********************populaire***********/
+        .trend{border-radius: 10px;}   
+        .trend__title h2 {margin:0;}
+        .trend__title{align-items: flex-end;}
+        .trend__art
+            {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap:1rem;
+            }
+            .card2
             {
                 background-color: #ffffff;
                 padding: 0.4rem;
@@ -137,28 +157,6 @@
                 width:auto;
                 height: auto;
             }
-   /**********************populaire***********/
-    .trend
-    {
-        margin-top:2.5rem;
-    
-    }
-    
-    .trend h2{padding-top:1rem;}
-    .trend__art
-        {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-gap:1rem;
-        }
-        .card2
-        {
-            background-color: #ffffff;
-            padding: 0.4rem;
-            margin:0;
-            width:auto;
-            height: auto;
-        }
 
 /***********************************activity********************************/
 
@@ -170,28 +168,59 @@
 {
     display:grid;
     grid-template-columns:repeat(4,1fr);
-    grid-template-rows: 1fr 1fr;
-    grid-auto-flow: column;
+    grid-template-rows: repeat(10,2rem);
     grid-gap:1rem;
-    margin-bottom:3rem; 
+    margin-bottom:1rem; 
+    
+   
 }
-
-    .activity__article :nth-child(1)
+    .carda
     {
-        grid-row: 1/span 2;
+        grid-row: 1/-1;
         grid-column: 1/1;
     }
     
+    .cardb
+    {
+        grid-row: 1/7;
+        grid-column: 2;
+    }
+    .activity__article :nth-child(5)
+    {
+        grid-row: 7/11;
+        grid-column: 2;
+    }
     .activity__article :nth-child(4)
     {
-        grid-row: 1/3;
+        grid-row: 1/-1;
         grid-column: 3;
     }
-.card3
-{
-    width:auto;
-    height: auto;
-}
+    .activity__article :nth-child(3)
+    {
+        grid-row: 1/6;
+        grid-column: 4;
+    }
+    .activity__article :nth-child(6)
+    {
+        grid-row: 6/11;
+        grid-column: 4;
+    }
+       .card3 
+        {
+        
+        display:grid;
+        grid-template-columns: 1fr;
+        grid-template-rows:1fr min-content;
+        
+            
+        }
+        
+           .card3 img
+            {
+                
+            height:100%;
+                    
+            }
     /*************************************footer************************************/
     footer
         {
@@ -218,7 +247,10 @@
         border: 1px #f2f2f2 solid;
         margin:2.5rem;
     }
-        
+        .card1
+        {
+            background-color: #ffffff;
+        }
     
     .trend
     {
@@ -236,9 +268,8 @@
         {
             justify-content: space-between;
         }
-            .card2
+                .card2
             {
-                /*height: 12rem;*/
                 width:20rem;
                 margin-right:1rem
             }
