--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,7 @@ img
     object-position: center;
     max-width: 100%;
     max-height: 100%;
-    /*display: block;*/
+   
 }
 /*---------------------------------------------------------header setting------------------------------------------------------------------------*/
 .header
@@ -85,7 +85,7 @@ img
       grid-row-start:1; 
       justify-self: end;
       font-weight: bold;
-      color:#0065fc;
+      
       
   }
   .header__menu :nth-child(1)
@@ -110,6 +110,10 @@ img
   {
       border-bottom:1px solid #f2f2f2;
       
+  }
+  #log
+  {
+    color:#0065fc;
   }
 
 /*************************************************filters ************************************************************************/
@@ -274,7 +278,7 @@ img
     line-height: 1.5rem;
     
 }
-    .global_hebergement:nth-child(2)
+    .trend
     {
         order: 1;
       
@@ -356,7 +360,7 @@ img
     .trend
         {                   
             padding:0 1rem 0 1rem;
-            margin-bottom:3rem;
+            /*margin-bottom:3rem;*/
             background-color: #f2f2f2;
             display:flex;
             /*flex-direction: column;*/
@@ -397,7 +401,9 @@ img
             }
             .card2
             {
-            display:flex;            
+            display:grid;
+            grid-template-columns: 2fr 3fr;
+            grid-gap:1rem;            
             border-radius: 10px;
             background-color: #ffffff;
             margin-bottom: 1rem;
@@ -407,26 +413,17 @@ img
             
             }
               
-                .card2__thumb /*mise en forme image card hebergement*/
-                {
-                
-                border-radius: 10px 00px 0 10px;
-                margin-right:1rem;
-                width:8rem;
-                height:8rem;
-               
-                }
-                    /*.card2__thumb__img
+                 .card2__thumb__img
                     {
-                    width:7rem;
+                    width:100%;
                     height:8rem;
                     border-radius: 10px 0px 0 10px; 
                     
-                    }*/
+                    }
                 .card2 .card__stars
                 {
                     margin-top:2rem;
-                    margin-bottom:0.8rem;
+                    margin-bottom:0.4rem;
                 }
 
          /*--------------------------------------------------------"Actitivé" card setting -------------------------------------------------------------*/
@@ -441,31 +438,35 @@ img
     }
        .activity__article
         {
-            display:flex;
-            flex-wrap: wrap;
-            align-items: flex-start;
+            display:grid;
+            grid-gap:1rem;
             justify-content: space-evenly;
             
         }
-    
-    
         .card3 
         {
+    
         border-radius: 10px;
-        box-shadow:2px 2px 6px rgb(206, 204, 204) ;   
-        cursor: pointer;
-        height: 12rem;
-        width:21rem;
-        margin-bottom: 1rem;
+        box-shadow:2px 2px 6px rgb(206, 204, 204) ; 
         
+       /*cursor: pointer;*/
+        /*display:grid;
+        flex-direction: column;
+        /*grid-template-columns: 1fr;
+        grid-template-rows:auto min-content;*/
+               
             
         }
-
+    
+        
         .card3 h3
         {
             margin:0.75rem;
         }
-              
+        .card3 :nth-child()
+        {
+            flex-shrink:3;
+        }
                 .card3 img
                 {
                     border-radius: 10px 10px 0 00px;        
