--- a/CSS/media.css
+++ b/CSS/media.css
@@ -113,6 +113,11 @@
         margin-top: 2rem;;
         /*justify-content: stretch;*/
     }
+    .global_hebergement :nth-child(2)
+    {
+        grid-row: initial;
+      
+    }
         .hebergement
         {
             background-color: #f2f2f2;
@@ -169,6 +174,7 @@
     display:grid;
     grid-template-columns:repeat(4,1fr);
     grid-template-rows: repeat(10,2rem);
+
     grid-gap:1rem;
     margin-bottom:1rem; 
     
@@ -209,16 +215,20 @@
         {
         
         display:grid;
-        grid-template-columns: 1fr;
-        grid-template-rows:1fr min-content;
+        /*grid-template-columns: 1fr;*/
+        grid-template-rows:auto min-content;
         
             
         }
+        .card3_contenaire
+        {
+            min-height: 0%;
+        }
         
-           .card3 img
-            {
-                
+        .card3 img
+            {                
             height:100%;
+            /*overflow:hidden;*/
                     
             }
     /*************************************footer************************************/
