--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,8 +10,6 @@ body /*inheritance*/
     font-size:1rem;
     display:grid;
     grid-template-columns:1fr;
-    /*grid-template-rows:1fr 0.1fr 0.5fr 0.4fr 0.2fr; /*pas besoin d'ajuster les dimension de la grille, automatique*/
-    /*align-content: flex-start;*/
     grid-template-areas: /*setup tempalte*/
     "header"
     "filters"
@@ -273,14 +271,14 @@ img
 .global_hebergement
 {
     grid-area:global_hebergement;
-    display:flex;
-    flex-direction: column;
+    display:grid;
+    grid-template-rows:repeat(auto,1fr);
     line-height: 1.5rem;
     
 }
     .trend
     {
-        order: 1;
+        grid-row: 1;
       
     }
 
@@ -360,10 +358,8 @@ img
     .trend
         {                   
             padding:0 1rem 0 1rem;
-            /*margin-bottom:3rem;*/
             background-color: #f2f2f2;
             display:flex;
-            /*flex-direction: column;*/
             flex-wrap: wrap;
             align-items: flex-start;
             justify-content: stretch;
@@ -449,12 +445,7 @@ img
         border-radius: 10px;
         box-shadow:2px 2px 6px rgb(206, 204, 204) ; 
         
-       /*cursor: pointer;*/
-        /*display:grid;
-        flex-direction: column;
-        /*grid-template-columns: 1fr;
-        grid-template-rows:auto min-content;*/
-               
+                   
             
         }
     
