--- a/CSS/media.css
+++ b/CSS/media.css
@@ -120,6 +120,8 @@
     }
         .hebergement
         {
+            display:grid;
+            justify-content: stretch;
             background-color: #f2f2f2;
             border-radius: 10px;
             border: 1px #f2f2f2 solid;
@@ -161,6 +163,7 @@
                 margin:0;
                 width:auto;
                 height: auto;
+                max-width:none;
             }
 
 /***********************************activity********************************/
@@ -182,8 +185,8 @@
 }
     .carda
     {
-        grid-row: 1/-1;
-        grid-column: 1/1;
+        grid-row: 1/11;
+        grid-column: 1;
     }
     
     .cardb
@@ -191,22 +194,22 @@
         grid-row: 1/7;
         grid-column: 2;
     }
-    .activity__article :nth-child(5)
+    .carde
     {
         grid-row: 7/11;
         grid-column: 2;
     }
-    .activity__article :nth-child(4)
+    .cardd
     {
         grid-row: 1/-1;
         grid-column: 3;
     }
-    .activity__article :nth-child(3)
+    .cardc
     {
         grid-row: 1/6;
         grid-column: 4;
     }
-    .activity__article :nth-child(6)
+    .cardf
     {
         grid-row: 6/11;
         grid-column: 4;
@@ -215,19 +218,18 @@
         {
         
         display:grid;
-        /*grid-template-columns: 1fr;*/
         grid-template-rows:auto min-content;
         
             
         }
         .card3_contenaire
         {
-            min-height: 0%;
+            /*min-height: 0%;*/
         }
         
         .card3 img
             {                
-            height:100%;
+            /*height:100%;
             /*overflow:hidden;*/
                     
             }
@@ -244,7 +246,7 @@
         }
 }
 
- @media screen and (min-width: 376px) and (max-width: 789px)
+ @media screen and (min-width: 600px) and (max-width: 1189px)
  {
  
  
@@ -280,9 +282,27 @@
         }
                 .card2
             {
-                width:20rem;
+                
                 margin-right:1rem
             }
+    
+            .activity__article{
+                grid-template-columns: 1fr 1fr;
+                grid-auto-flow: dense;
+            }
+    
+            footer
+            {
+                grid-area:footer;
+                display:grid;
+                grid-template-columns: repeat(3,1fr);
+                background-color: #f2f2f2;
+                padding:2rem 2rem 2rem 3.2rem;
+                line-height: 2rem;
+    
+            }
+    }
+    
 }
  
  
