--- a/CSS/media.css
+++ b/CSS/media.css
@@ -49,7 +49,7 @@
       border-top:2px solid #0065fc;
       border-bottom: none;
       color:#deebff;
-      background-color:#deebff ;
+      
       }
       .header__menu__list__hoover
   {
@@ -100,6 +100,11 @@
   #filtrediv
   {
       margin-right:2rem;
+  }
+  .filters__contenaire__button
+  {
+    margin-right:1rem;
+}
   }
       /************************************main***********************************************/
     .global_hebergement
@@ -161,6 +166,7 @@
                 margin:0;
                 width:auto;
                 height: auto;
+                max-width: none;
             }
 
 /***********************************activity********************************/
@@ -174,19 +180,18 @@
     display:grid;
     grid-template-columns:repeat(4,1fr);
     grid-template-rows: repeat(10,2rem);
-
     grid-gap:1rem;
     margin-bottom:1rem; 
     
    
 }
-    .carda
+    .activity__article :nth-child(1)
     {
-        grid-row: 1/-1;
-        grid-column: 1/1;
+        grid-row: 1/11;
+        grid-column: 1;
     }
     
-    .cardb
+    .activity__article :nth-child(2)
     {
         grid-row: 1/7;
         grid-column: 2;
@@ -198,7 +203,7 @@
     }
     .activity__article :nth-child(4)
     {
-        grid-row: 1/-1;
+        grid-row: 1/11;
         grid-column: 3;
     }
     .activity__article :nth-child(3)
@@ -215,21 +220,36 @@
         {
         
         display:grid;
-        /*grid-template-columns: 1fr;*/
-        grid-template-rows:auto min-content;
-        
-            
+        grid-template-rows:auto min-content; 
+                  
         }
-        .card3_contenaire
+        .card3 :nth-child(1)
+        {
+            grid-row: initial;
+            grid-column: initial;
+        }
+        .card3 :nth-child(2)
+        {
+            grid-row: initial;
+            grid-column: initial;
+        }
+
+        .card3 h3{padding-bottom:0rem;}
+        /*.card3_contenaire
         {
             min-height: 0%;
-        }
+            border: 1px solid black;
+        }*/
+
+        .imL{max-height: 14rem;}
+        .imS{max-height: 11rem;}
+        .imXS{max-height: 8rem;}
         
         .card3 img
             {                
-            height:100%;
-            /*overflow:hidden;*/
-                    
+            height:90%;
+            /*min-height:0;*/
+                              
             }
     /*************************************footer************************************/
     footer
@@ -244,7 +264,7 @@
         }
 }
 
- @media screen and (min-width: 376px) and (max-width: 789px)
+ @media screen and (min-width: 600px) and (max-width: 1199px)
  {
  
  
@@ -283,6 +303,21 @@
                 width:20rem;
                 margin-right:1rem
             }
+        .activity__article{
+            grid-template-columns: 1fr 1fr;
+            grid-auto-flow: dense;
+        }
+
+        footer
+        {
+            grid-area:footer;
+            display:grid;
+            grid-template-columns: repeat(3,1fr);
+            background-color: #f2f2f2;
+            padding:2rem 2rem 2rem 3.2rem;
+            line-height: 2rem;
+
+        }
 }
  
  
