--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 600px) 
  {
-    h2{margin-top:0;}
+    /*h2{margin-top:0;}*/
     /**********************header*******************/
    
     .header__menu
@@ -153,7 +153,7 @@
             margin-top:2.5rem;
             margin:0;
         }
-        .hebergement span{font-weight: bold; padding:1rem 0 1rem 0;}
+        .hebergement span{ margin:0; padding:1rem 0 1rem 0.5rem;}
         .hebergement h2{margin:1rem 0 1rem 0;}
             .hosting_art
             {
@@ -166,15 +166,21 @@
             .card1
                 {
                     background-color: #ffffff;
-                    padding: 0.4rem;
+                    /*padding: 0.4rem;*/
+
                     margin:0;
                     width:auto;
                     height: auto;
                 }
+           
     /**********************populaire***********/
         .trend{border-radius: 10px;}   
         .trend__title h2 {margin:0;}
-        .trend__title{align-items: flex-end;}
+        .trend__title
+        {
+            align-items: flex-end;
+            margin-bottom:0;
+        }
         .trend__art
             {
                 display: grid;
@@ -298,6 +304,7 @@
         border: 1px #f2f2f2 solid;
         margin:2.5rem;
     }
+    .hebergement span{ align-self: center;padding:0rem 0 1rem 0rem;}
         .card1
         {
             background-color: #ffffff;
@@ -314,6 +321,7 @@
         {
             width:100%;
             justify-content:space-between;
+            margin-bottom:0;
         }
         .trend__art
         {
