--- a/CSS/style.css
+++ b/CSS/style.css
@@ -383,14 +383,19 @@ button {
   justify-content: space-evenly;
 }
 .card3 {
+display: flex;
   border-radius: 10px;
   box-shadow: 2px 2px 6px rgb(206, 204, 204);
 }
-
+.act
+{
+    display: grid;
+    grid-template-rows: 8.5rem 1fr;
+}
 .card3 img {
   border-radius: 10px 10px 0 00px;
   width: 100%;
-  height: 8.5rem;
+  /*height: 100%*/
 }
 .card3 h3 {
   margin: 0.75rem;
