--- a/CSS/style.css
+++ b/CSS/style.css
@@ -231,10 +231,13 @@ button {
   grid-area: global_hebergement;
   display: grid;
   line-height: 1.5rem;
+  grid-template-areas: /*setup tempalte*/
+    "trend"
+    "hosting";
 }
-.trend {
+/*.trend {
   grid-row: 1;
-}
+}*/
 
 .global_hebergement h3 {
   margin: 0;
@@ -254,6 +257,7 @@ button {
 }
 /********************************hosting*-****************************/
 .hebergement {
+  grid-area: hosting;
   padding: 0 1rem 0 1rem;
   margin-bottom: 3rem;
   display: flex;
@@ -310,6 +314,7 @@ button {
 }
 /****************************************popular**********************************************/
 .trend {
+  grid-area: trend;
   padding: 0 1rem 0 1rem;
   background-color: #f2f2f2;
   display: flex;
@@ -383,14 +388,13 @@ button {
   justify-content: space-evenly;
 }
 .card3 {
-display: flex;
+  display: flex;
   border-radius: 10px;
   box-shadow: 2px 2px 6px rgb(206, 204, 204);
 }
-.act
-{
-    display: grid;
-    grid-template-rows: 8.5rem 1fr;
+.act {
+  display: grid;
+  grid-template-rows: 8.5rem 1fr;
 }
 .card3 img {
   border-radius: 10px 10px 0 00px;
